# thesis_code

./: LICENSE  README.md  pyproject.toml  requirements.txt
master_project/: requirements.txt
master_project/data/processed/: after_responses.json  aggregated_shifts_persona_data.csv  articles.json  before_responses.json  combined_data.csv  complete_data.csv  filtered_data.csv  llm_vs_real_comparison_before.csv  persona_prompts.json  processed_responses.json  prompts_with_articles.json  user_ranks.csv
master_project/data/raw/: articles_bias.json  filtered_data.csv  question_codes.json  question_to_topic.json  topics.json
master_project/results/: question_analysis.csv  step_distribution_table.csv
master_project/src/: after_responses.ipynb  after_responses.py  agents_alignment.ipynb  analysis.ipynb  analysis_after.ipynb  article_cache.json  before_responses.py  bias_article_responses.ipynb  bias_article_responses_refactored.ipynb  change_analysis.py  data_utils.py  event_registry.py  final_analysis.ipynb  initial_analysis.ipynb  llm.py  new_shift_analysis.ipynb  output_parser.py  start_analysis.py  sys_prompt_utils.py
