[tool.poetry]
name = "mindshift"
version = "0.1.0"
description = "Can events change the opinion of generative agents at the edges of the political spectrum?"
authors = ["Miriam <miriam.coccia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
